Fase 2/fase2ConstanzaPedro/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    TkCarError
    TkError
    TkLlaveAbre
    TkLlaveCierra
    TkCarEspecial
    TkCaracterError
    TkErrorSol

Grammar

Rule 0     S' -> bloque
Rule 1     bloque -> TkBegin cuerpo TkEnd
Rule 2     bloque -> TkWith declaracion TkBegin cuerpo TkEnd
Rule 3     declaracion -> TkVar variables TkDosPuntos TkInt
Rule 4     declaracion -> TkVar variables TkDosPuntos TkBool
Rule 5     declaracion -> TkVar variables TkDosPuntos TkChar
Rule 6     declaracion -> TkVar variables TkDosPuntos arreglo
Rule 7     declaracion -> TkVar variables TkDosPuntos TkInt variables
Rule 8     declaracion -> TkVar variables TkDosPuntos TkBool variables
Rule 9     declaracion -> TkVar variables TkDosPuntos TkChar variables
Rule 10    declaracion -> TkVar variables TkDosPuntos arreglo variables
Rule 11    arreglo -> TkArray TkCorcheteAbre TkNum TkCorcheteCierra TkOf TkChar
Rule 12    arreglo -> TkArray TkCorcheteAbre TkNum TkCorcheteCierra TkOf TkInt
Rule 13    arreglo -> TkArray TkCorcheteAbre TkNum TkCorcheteCierra TkOf TkBool
Rule 14    arreglo -> TkArray TkCorcheteAbre TkNum TkCorcheteCierra TkOf arreglo
Rule 15    arreglo -> TkArray TkCorcheteAbre TkId TkCorcheteCierra TkOf TkChar
Rule 16    arreglo -> TkArray TkCorcheteAbre TkId TkCorcheteCierra TkOf TkInt
Rule 17    arreglo -> TkArray TkCorcheteAbre TkId TkCorcheteCierra TkOf TkBool
Rule 18    arreglo -> TkArray TkCorcheteAbre TkId TkCorcheteCierra TkOf arreglo
Rule 19    arreglo -> TkArray TkCorcheteAbre opAritm TkCorcheteCierra TkOf TkChar
Rule 20    arreglo -> TkArray TkCorcheteAbre opAritm TkCorcheteCierra TkOf TkInt
Rule 21    arreglo -> TkArray TkCorcheteAbre opAritm TkCorcheteCierra TkOf TkBool
Rule 22    arreglo -> TkArray TkCorcheteAbre opAritm TkCorcheteCierra TkOf arreglo
Rule 23    terminal -> TkId
Rule 24    terminal -> TkCaracter
Rule 25    terminal -> TkNum
Rule 26    terminal -> TkTrue
Rule 27    terminal -> TkFalse
Rule 28    terminal -> TkTab
Rule 29    terminal -> TkSalto
Rule 30    terminal -> TkComilla
Rule 31    terminal -> TkBarra
Rule 32    terminal -> TkId TkCorcheteAbre TkNum TkCorcheteCierra
Rule 33    terminal -> TkParAbre terminal TkParCierra
Rule 34    cuerpo -> instruccion
Rule 35    cuerpo -> instruccion cuerpo
Rule 36    cuerpo -> bloque cuerpo
Rule 37    cuerpo -> bloque
Rule 38    instruccion -> expresion TkPuntoYComa
Rule 39    instruccion -> condicional
Rule 40    instruccion -> iterDeter
Rule 41    instruccion -> iterInd
Rule 42    instruccion -> asignacion TkPuntoYComa
Rule 43    instruccion -> input TkPuntoYComa
Rule 44    instruccion -> output TkPuntoYComa
Rule 45    condicional -> TkIf opBool TkHacer cuerpo TkEnd
Rule 46    condicional -> TkIf opBool TkHacer cuerpo TkOtherwise TkHacer cuerpo TkEnd
Rule 47    condicional -> TkIf opRel TkHacer cuerpo TkEnd
Rule 48    condicional -> TkIf opRel TkHacer cuerpo TkOtherwise TkHacer cuerpo TkEnd
Rule 49    condicional -> TkIf terminal TkHacer cuerpo TkEnd
Rule 50    condicional -> TkIf terminal TkHacer cuerpo TkOtherwise TkHacer cuerpo TkEnd
Rule 51    asignacion -> TkId TkAsignacion expresion
Rule 52    input -> TkRead TkId
Rule 53    output -> TkPrint expresion
Rule 54    iterInd -> TkWhile opRel TkHacer cuerpo TkEnd
Rule 55    iterInd -> TkWhile opBool TkHacer cuerpo TkEnd
Rule 56    iterDeter -> TkFor TkId TkFrom opAritm TkTo opAritm TkStep opAritm TkHacer cuerpo TkEnd
Rule 57    iterDeter -> TkFor TkId TkFrom opAritm TkTo terminal TkStep opAritm TkHacer cuerpo TkEnd
Rule 58    iterDeter -> TkFor TkId TkFrom terminal TkTo opAritm TkStep opAritm TkHacer cuerpo TkEnd
Rule 59    iterDeter -> TkFor TkId TkFrom terminal TkTo terminal TkStep opAritm TkHacer cuerpo TkEnd
Rule 60    iterDeter -> TkFor TkId TkFrom opAritm TkTo opAritm TkStep terminal TkHacer cuerpo TkEnd
Rule 61    iterDeter -> TkFor TkId TkFrom opAritm TkTo terminal TkStep terminal TkHacer cuerpo TkEnd
Rule 62    iterDeter -> TkFor TkId TkFrom terminal TkTo opAritm TkStep terminal TkHacer cuerpo TkEnd
Rule 63    iterDeter -> TkFor TkId TkFrom terminal TkTo terminal TkStep terminal TkHacer cuerpo TkEnd
Rule 64    iterDeter -> TkFor TkId TkFrom opAritm TkTo opAritm TkHacer cuerpo TkEnd
Rule 65    iterDeter -> TkFor TkId TkFrom opAritm TkTo terminal TkHacer cuerpo TkEnd
Rule 66    iterDeter -> TkFor TkId TkFrom terminal TkTo opAritm TkHacer cuerpo TkEnd
Rule 67    iterDeter -> TkFor TkId TkFrom terminal TkTo terminal TkHacer cuerpo TkEnd
Rule 68    expresion -> opAritm
Rule 69    expresion -> terminal
Rule 70    expresion -> opRel
Rule 71    expresion -> opCar
Rule 72    expresion -> opBool
Rule 73    opAritm -> expresion TkResta expresion
Rule 74    opAritm -> expresion TkSuma expresion
Rule 75    opAritm -> expresion TkDiv expresion
Rule 76    opAritm -> expresion TkMult expresion
Rule 77    opAritm -> expresion TkMod expresion
Rule 78    opAritm -> expresion TkConcatenacion expresion
Rule 79    opAritm -> expresion TkPunto expresion
Rule 80    opAritm -> TkParAbre expresion TkResta expresion TkParCierra
Rule 81    opAritm -> TkParAbre expresion TkSuma expresion TkParCierra
Rule 82    opAritm -> TkParAbre expresion TkDiv expresion TkParCierra
Rule 83    opAritm -> TkParAbre expresion TkMult expresion TkParCierra
Rule 84    opAritm -> TkParAbre expresion TkMod expresion TkParCierra
Rule 85    opAritm -> TkParAbre expresion TkConcatenacion expresion TkParCierra
Rule 86    opAritm -> TkParAbre expresion TkPunto expresion TkParCierra
Rule 87    opAritm -> TkResta expresion
Rule 88    opAritm -> TkParAbre TkResta expresion TkParCierra
Rule 89    opAritm -> TkShift expresion
Rule 90    opAritm -> TkParAbre TkShift expresion TkParCierra
Rule 91    opCar -> terminal TkSiguienteCar
Rule 92    opCar -> terminal TkAnteriorCar
Rule 93    opCar -> TkValorAscii terminal
Rule 94    opCar -> TkValorAscii terminal TkSiguienteCar
Rule 95    opCar -> TkValorAscii terminal TkAnteriorCar
Rule 96    opRel -> expresion TkMayor expresion
Rule 97    opRel -> expresion TkMenor expresion
Rule 98    opRel -> expresion TkMayorIgual expresion
Rule 99    opRel -> expresion TkMenorIgual expresion
Rule 100   opRel -> expresion TkIgual expresion
Rule 101   opRel -> expresion TkDesigual expresion
Rule 102   opRel -> TkParAbre expresion TkMayor expresion TkParCierra
Rule 103   opRel -> TkParAbre expresion TkMenor expresion TkParCierra
Rule 104   opRel -> TkParAbre expresion TkMayorIgual expresion TkParCierra
Rule 105   opRel -> TkParAbre expresion TkMenorIgual expresion TkParCierra
Rule 106   opRel -> TkParAbre expresion TkIgual expresion TkParCierra
Rule 107   opRel -> TkParAbre expresion TkDesigual expresion TkParCierra
Rule 108   variables -> TkId TkComa variables
Rule 109   variables -> TkId TkAsignacion expresion TkComa variables
Rule 110   variables -> TkId
Rule 111   variables -> TkId TkAsignacion expresion
Rule 112   opBool -> expresion TkConjuncion expresion
Rule 113   opBool -> expresion TkDisyuncion expresion
Rule 114   opBool -> TkParAbre expresion TkConjuncion expresion TkParCierra
Rule 115   opBool -> TkParAbre expresion TkDisyuncion expresion TkParCierra
Rule 116   opBool -> TkNot expresion
Rule 117   opBool -> TkParAbre TkNot expresion TkParCierra

Terminals, with rules where they appear

TkAnteriorCar        : 92 95
TkArray              : 11 12 13 14 15 16 17 18 19 20 21 22
TkAsignacion         : 51 109 111
TkBarra              : 31
TkBegin              : 1 2
TkBool               : 4 8 13 17 21
TkCarError           : 
TkCarEspecial        : 
TkCaracter           : 24
TkCaracterError      : 
TkChar               : 5 9 11 15 19
TkComa               : 108 109
TkComilla            : 30
TkConcatenacion      : 78 85
TkConjuncion         : 112 114
TkCorcheteAbre       : 11 12 13 14 15 16 17 18 19 20 21 22 32
TkCorcheteCierra     : 11 12 13 14 15 16 17 18 19 20 21 22 32
TkDesigual           : 101 107
TkDisyuncion         : 113 115
TkDiv                : 75 82
TkDosPuntos          : 3 4 5 6 7 8 9 10
TkEnd                : 1 2 45 46 47 48 49 50 54 55 56 57 58 59 60 61 62 63 64 65 66 67
TkError              : 
TkErrorSol           : 
TkFalse              : 27
TkFor                : 56 57 58 59 60 61 62 63 64 65 66 67
TkFrom               : 56 57 58 59 60 61 62 63 64 65 66 67
TkHacer              : 45 46 46 47 48 48 49 50 50 54 55 56 57 58 59 60 61 62 63 64 65 66 67
TkId                 : 15 16 17 18 23 32 51 52 56 57 58 59 60 61 62 63 64 65 66 67 108 109 110 111
TkIf                 : 45 46 47 48 49 50
TkIgual              : 100 106
TkInt                : 3 7 12 16 20
TkLlaveAbre          : 
TkLlaveCierra        : 
TkMayor              : 96 102
TkMayorIgual         : 98 104
TkMenor              : 97 103
TkMenorIgual         : 99 105
TkMod                : 77 84
TkMult               : 76 83
TkNot                : 116 117
TkNum                : 11 12 13 14 25 32
TkOf                 : 11 12 13 14 15 16 17 18 19 20 21 22
TkOtherwise          : 46 48 50
TkParAbre            : 33 80 81 82 83 84 85 86 88 90 102 103 104 105 106 107 114 115 117
TkParCierra          : 33 80 81 82 83 84 85 86 88 90 102 103 104 105 106 107 114 115 117
TkPrint              : 53
TkPunto              : 79 86
TkPuntoYComa         : 38 42 43 44
TkRead               : 52
TkResta              : 73 80 87 88
TkSalto              : 29
TkShift              : 89 90
TkSiguienteCar       : 91 94
TkStep               : 56 57 58 59 60 61 62 63
TkSuma               : 74 81
TkTab                : 28
TkTo                 : 56 57 58 59 60 61 62 63 64 65 66 67
TkTrue               : 26
TkValorAscii         : 93 94 95
TkVar                : 3 4 5 6 7 8 9 10
TkWhile              : 54 55
TkWith               : 2
error                : 

Nonterminals, with rules where they appear

arreglo              : 6 10 14 18 22
asignacion           : 42
bloque               : 36 37 0
condicional          : 39
cuerpo               : 1 2 35 36 45 46 46 47 48 48 49 50 50 54 55 56 57 58 59 60 61 62 63 64 65 66 67
declaracion          : 2
expresion            : 38 51 53 73 73 74 74 75 75 76 76 77 77 78 78 79 79 80 80 81 81 82 82 83 83 84 84 85 85 86 86 87 88 89 90 96 96 97 97 98 98 99 99 100 100 101 101 102 102 103 103 104 104 105 105 106 106 107 107 109 111 112 112 113 113 114 114 115 115 116 117
input                : 43
instruccion          : 34 35
iterDeter            : 40
iterInd              : 41
opAritm              : 19 20 21 22 56 56 56 57 57 58 58 59 60 60 61 62 64 64 65 66 68
opBool               : 45 46 55 72
opCar                : 71
opRel                : 47 48 54 70
output               : 44
terminal             : 33 49 50 57 58 59 59 60 61 61 62 62 63 63 63 65 66 67 67 69 91 92 93 94 95
variables            : 3 4 5 6 7 7 8 8 9 9 10 10 108 109

Parsing method: LALR

state 0

    (0) S' -> . bloque
    (1) bloque -> . TkBegin cuerpo TkEnd
    (2) bloque -> . TkWith declaracion TkBegin cuerpo TkEnd

    TkBegin         shift and go to state 1
    TkWith          shift and go to state 2

    bloque                         shift and go to state 3

state 1

    (1) bloque -> TkBegin . cuerpo TkEnd
    (34) cuerpo -> . instruccion
    (35) cuerpo -> . instruccion cuerpo
    (36) cuerpo -> . bloque cuerpo
    (37) cuerpo -> . bloque
    (38) instruccion -> . expresion TkPuntoYComa
    (39) instruccion -> . condicional
    (40) instruccion -> . iterDeter
    (41) instruccion -> . iterInd
    (42) instruccion -> . asignacion TkPuntoYComa
    (43) instruccion -> . input TkPuntoYComa
    (44) instruccion -> . output TkPuntoYComa
    (1) bloque -> . TkBegin cuerpo TkEnd
    (2) bloque -> . TkWith declaracion TkBegin cuerpo TkEnd
    (68) expresion -> . opAritm
    (69) expresion -> . terminal
    (70) expresion -> . opRel
    (71) expresion -> . opCar
    (72) expresion -> . opBool
    (45) condicional -> . TkIf opBool TkHacer cuerpo TkEnd
    (46) condicional -> . TkIf opBool TkHacer cuerpo TkOtherwise TkHacer cuerpo TkEnd
    (47) condicional -> . TkIf opRel TkHacer cuerpo TkEnd
    (48) condicional -> . TkIf opRel TkHacer cuerpo TkOtherwise TkHacer cuerpo TkEnd
    (49) condicional -> . TkIf terminal TkHacer cuerpo TkEnd
    (50) condicional -> . TkIf terminal TkHacer cuerpo TkOtherwise TkHacer cuerpo TkEnd
    (56) iterDeter -> . TkFor TkId TkFrom opAritm TkTo opAritm TkStep opAritm TkHacer cuerpo TkEnd
    (57) iterDeter -> . TkFor TkId TkFrom opAritm TkTo terminal TkStep opAritm TkHacer cuerpo TkEnd
    (58) iterDeter -> . TkFor TkId TkFrom terminal TkTo opAritm TkStep opAritm TkHacer cuerpo TkEnd
    (59) iterDeter -> . TkFor TkId TkFrom terminal TkTo terminal TkStep opAritm TkHacer cuerpo TkEnd
    (60) iterDeter -> . TkFor TkId TkFrom opAritm TkTo opAritm TkStep terminal TkHacer cuerpo TkEnd
    (61) iterDeter -> . TkFor TkId TkFrom opAritm TkTo terminal TkStep terminal TkHacer cuerpo TkEnd
    (62) iterDeter -> . TkFor TkId TkFrom terminal TkTo opAritm TkStep terminal TkHacer cuerpo TkEnd
    (63) iterDeter -> . TkFor TkId TkFrom terminal TkTo terminal TkStep terminal TkHacer cuerpo TkEnd
    (64) iterDeter -> . TkFor TkId TkFrom opAritm TkTo opAritm TkHacer cuerpo TkEnd
    (65) iterDeter -> . TkFor TkId TkFrom opAritm TkTo terminal TkHacer cuerpo TkEnd
    (66) iterDeter -> . TkFor TkId TkFrom terminal TkTo opAritm TkHacer cuerpo TkEnd
    (67) iterDeter -> . TkFor TkId TkFrom terminal TkTo terminal TkHacer cuerpo TkEnd
    (54) iterInd -> . TkWhile opRel TkHacer cuerpo TkEnd
    (55) iterInd -> . TkWhile opBool TkHacer cuerpo TkEnd
    (51) asignacion -> . TkId TkAsignacion expresion
    (52) input -> . TkRead TkId
    (53) output -> . TkPrint expresion
    (73) opAritm -> . expresion TkResta expresion
    (74) opAritm -> . expresion TkSuma expresion
    (75) opAritm -> . expresion TkDiv expresion
    (76) opAritm -> . expresion TkMult expresion
    (77) opAritm -> . expresion TkMod expresion
    (78) opAritm -> . expresion TkConcatenacion expresion
    (79) opAritm -> . expresion TkPunto expresion
    (80) opAritm -> . TkParAbre expresion TkResta expresion TkParCierra
    (81) opAritm -> . TkParAbre expresion TkSuma expresion TkParCierra
    (82) opAritm -> . TkParAbre expresion TkDiv expresion TkParCierra
    (83) opAritm -> . TkParAbre expresion TkMult expresion TkParCierra
    (84) opAritm -> . TkParAbre expresion TkMod expresion TkParCierra
    (85) opAritm -> . TkParAbre expresion TkConcatenacion expresion TkParCierra
    (86) opAritm -> . TkParAbre expresion TkPunto expresion TkParCierra
    (87) opAritm -> . TkResta expresion
    (88) opAritm -> . TkParAbre TkResta expresion TkParCierra
    (89) opAritm -> . TkShift expresion
    (90) opAritm -> . TkParAbre TkShift expresion TkParCierra
    (23) terminal -> . TkId
    (24) terminal -> . TkCaracter
    (25) terminal -> . TkNum
    (26) terminal -> . TkTrue
    (27) terminal -> . TkFalse
    (28) terminal -> . TkTab
    (29) terminal -> . TkSalto
    (30) terminal -> . TkComilla
    (31) terminal -> . TkBarra
    (32) terminal -> . TkId TkCorcheteAbre TkNum TkCorcheteCierra
    (33) terminal -> . TkParAbre terminal TkParCierra
    (96) opRel -> . expresion TkMayor expresion
    (97) opRel -> . expresion TkMenor expresion
    (98) opRel -> . expresion TkMayorIgual expresion
    (99) opRel -> . expresion TkMenorIgual expresion
    (100) opRel -> . expresion TkIgual expresion
    (101) opRel -> . expresion TkDesigual expresion
    (102) opRel -> . TkParAbre expresion TkMayor expresion TkParCierra
    (103) opRel -> . TkParAbre expresion TkMenor expresion TkParCierra
    (104) opRel -> . TkParAbre expresion TkMayorIgual expresion TkParCierra
    (105) opRel -> . TkParAbre expresion TkMenorIgual expresion TkParCierra
    (106) opRel -> . TkParAbre expresion TkIgual expresion TkParCierra
    (107) opRel -> . TkParAbre expresion TkDesigual expresion TkParCierra
    (91) opCar -> . terminal TkSiguienteCar
    (92) opCar -> . terminal TkAnteriorCar
    (93) opCar -> . TkValorAscii terminal
    (94) opCar -> . TkValorAscii terminal TkSiguienteCar
    (95) opCar -> . TkValorAscii terminal TkAnteriorCar
    (112) opBool -> . expresion TkConjuncion expresion
    (113) opBool -> . expresion TkDisyuncion expresion
    (114) opBool -> . TkParAbre expresion TkConjuncion expresion TkParCierra
    (115) opBool -> . TkParAbre expresion TkDisyuncion expresion TkParCierra
    (116) opBool -> . TkNot expresion
    (117) opBool -> . TkParAbre TkNot expresion TkParCierra

    TkBegin         shift and go to state 1
    TkWith          shift and go to state 2
    TkIf            shift and go to state 36
    TkFor           shift and go to state 4
    TkWhile         shift and go to state 34
    TkId            shift and go to state 37
    TkRead          shift and go to state 19
    TkPrint         shift and go to state 17
    TkParAbre       shift and go to state 30
    TkResta         shift and go to state 33
    TkShift         shift and go to state 24
    TkCaracter      shift and go to state 12
    TkNum           shift and go to state 21
    TkTrue          shift and go to state 6
    TkFalse         shift and go to state 5
    TkTab           shift and go to state 31
    TkSalto         shift and go to state 18
    TkComilla       shift and go to state 13
    TkBarra         shift and go to state 32
    TkValorAscii    shift and go to state 9
    TkNot           shift and go to state 28

    opCar                          shift and go to state 15
    expresion                      shift and go to state 22
    bloque                         shift and go to state 25
    opAritm                        shift and go to state 7
    instruccion                    shift and go to state 29
    cuerpo                         shift and go to state 8
    condicional                    shift and go to state 10
    opRel                          shift and go to state 11
    asignacion                     shift and go to state 16
    output                         shift and go to state 35
    iterDeter                      shift and go to state 23
    opBool                         shift and go to state 26
    input                          shift and go to state 14
    iterInd                        shift and go to state 20
    terminal                       shift and go to state 27

state 2

    (2) bloque -> TkWith . declaracion TkBegin cuerpo TkEnd
    (3) declaracion -> . TkVar variables TkDosPuntos TkInt
    (4) declaracion -> . TkVar variables TkDosPuntos TkBool
    (5) declaracion -> . TkVar variables TkDosPuntos TkChar
    (6) declaracion -> . TkVar variables TkDosPuntos arreglo
    (7) declaracion -> . TkVar variables TkDosPuntos TkInt variables
    (8) declaracion -> . TkVar variables TkDosPuntos TkBool variables
    (9) declaracion -> . TkVar variables TkDosPuntos TkChar variables
    (10) declaracion -> . TkVar variables TkDosPuntos arreglo variables

    TkVar           shift and go to state 39

    declaracion                    shift and go to state 38

state 3

    (0) S' -> bloque .



state 4

    (56) iterDeter -> TkFor . TkId TkFrom opAritm TkTo opAritm TkStep opAritm TkHacer cuerpo TkEnd
    (57) iterDeter -> TkFor . TkId TkFrom opAritm TkTo terminal TkStep opAritm TkHacer cuerpo TkEnd
    (58) iterDeter -> TkFor . TkId TkFrom terminal TkTo opAritm TkStep opAritm TkHacer cuerpo TkEnd
    (59) iterDeter -> TkFor . TkId TkFrom terminal TkTo terminal TkStep opAritm TkHacer cuerpo TkEnd
    (60) iterDeter -> TkFor . TkId TkFrom opAritm TkTo opAritm TkStep terminal TkHacer cuerpo TkEnd
    (61) iterDeter -> TkFor . TkId TkFrom opAritm TkTo terminal TkStep terminal TkHacer cuerpo TkEnd
    (62) iterDeter -> TkFor . TkId TkFrom terminal TkTo opAritm TkStep terminal TkHacer cuerpo TkEnd
    (63) iterDeter -> TkFor . TkId TkFrom terminal TkTo terminal TkStep terminal TkHacer cuerpo TkEnd
    (64) iterDeter -> TkFor . TkId TkFrom opAritm TkTo opAritm TkHacer cuerpo TkEnd
    (65) iterDeter -> TkFor . TkId TkFrom opAritm TkTo terminal TkHacer cuerpo TkEnd
    (66) iterDeter -> TkFor . TkId TkFrom terminal TkTo opAritm TkHacer cuerpo TkEnd
    (67) iterDeter -> TkFor . TkId TkFrom terminal TkTo terminal TkHacer cuerpo TkEnd

    TkId            shift and go to state 40


state 5

    (27) terminal -> TkFalse .

    TkHacer         reduce using rule 27 (terminal -> TkFalse .)
    TkSiguienteCar  reduce using rule 27 (terminal -> TkFalse .)
    TkAnteriorCar   reduce using rule 27 (terminal -> TkFalse .)
    TkConjuncion    reduce using rule 27 (terminal -> TkFalse .)
    TkDisyuncion    reduce using rule 27 (terminal -> TkFalse .)
    TkMayor         reduce using rule 27 (terminal -> TkFalse .)
    TkMenor         reduce using rule 27 (terminal -> TkFalse .)
    TkMayorIgual    reduce using rule 27 (terminal -> TkFalse .)
    TkMenorIgual    reduce using rule 27 (terminal -> TkFalse .)
    TkIgual         reduce using rule 27 (terminal -> TkFalse .)
    TkDesigual      reduce using rule 27 (terminal -> TkFalse .)
    TkResta         reduce using rule 27 (terminal -> TkFalse .)
    TkSuma          reduce using rule 27 (terminal -> TkFalse .)
    TkDiv           reduce using rule 27 (terminal -> TkFalse .)
    TkMult          reduce using rule 27 (terminal -> TkFalse .)
    TkMod           reduce using rule 27 (terminal -> TkFalse .)
    TkConcatenacion reduce using rule 27 (terminal -> TkFalse .)
    TkPunto         reduce using rule 27 (terminal -> TkFalse .)
    TkPuntoYComa    reduce using rule 27 (terminal -> TkFalse .)
    TkParCierra     reduce using rule 27 (terminal -> TkFalse .)
    TkTo            reduce using rule 27 (terminal -> TkFalse .)
    TkComa          reduce using rule 27 (terminal -> TkFalse .)
    TkDosPuntos     reduce using rule 27 (terminal -> TkFalse .)
    TkBegin         reduce using rule 27 (terminal -> TkFalse .)
    TkStep          reduce using rule 27 (terminal -> TkFalse .)
    TkCorcheteCierra reduce using rule 27 (terminal -> TkFalse .)


state 6

    (26) terminal -> TkTrue .

    TkHacer         reduce using rule 26 (terminal -> TkTrue .)
    TkSiguienteCar  reduce using rule 26 (terminal -> TkTrue .)
    TkAnteriorCar   reduce using rule 26 (terminal -> TkTrue .)
    TkConjuncion    reduce using rule 26 (terminal -> TkTrue .)
    TkDisyuncion    reduce using rule 26 (terminal -> TkTrue .)
    TkMayor         reduce using rule 26 (terminal -> TkTrue .)
    TkMenor         reduce using rule 26 (terminal -> TkTrue .)
    TkMayorIgual    reduce using rule 26 (terminal -> TkTrue .)
    TkMenorIgual    reduce using rule 26 (terminal -> TkTrue .)
    TkIgual         reduce using rule 26 (terminal -> TkTrue .)
    TkDesigual      reduce using rule 26 (terminal -> TkTrue .)
    TkResta         reduce using rule 26 (terminal -> TkTrue .)
    TkSuma          reduce using rule 26 (terminal -> TkTrue .)
    TkDiv           reduce using rule 26 (terminal -> TkTrue .)
    TkMult          reduce using rule 26 (terminal -> TkTrue .)
    TkMod           reduce using rule 26 (terminal -> TkTrue .)
    TkConcatenacion reduce using rule 26 (terminal -> TkTrue .)
    TkPunto         reduce using rule 26 (terminal -> TkTrue .)
    TkPuntoYComa    reduce using rule 26 (terminal -> TkTrue .)
    TkParCierra     reduce using rule 26 (terminal -> TkTrue .)
    TkTo            reduce using rule 26 (terminal -> TkTrue .)
    TkComa          reduce using rule 26 (terminal -> TkTrue .)
    TkDosPuntos     reduce using rule 26 (terminal -> TkTrue .)
    TkBegin         reduce using rule 26 (terminal -> TkTrue .)
    TkStep          reduce using rule 26 (terminal -> TkTrue .)
    TkCorcheteCierra reduce using rule 26 (terminal -> TkTrue .)


state 7

    (68) expresion -> opAritm .

    TkConjuncion    reduce using rule 68 (expresion -> opAritm .)
    TkDisyuncion    reduce using rule 68 (expresion -> opAritm .)
    TkMayor         reduce using rule 68 (expresion -> opAritm .)
    TkMenor         reduce using rule 68 (expresion -> opAritm .)
    TkMayorIgual    reduce using rule 68 (expresion -> opAritm .)
    TkMenorIgual    reduce using rule 68 (expresion -> opAritm .)
    TkIgual         reduce using rule 68 (expresion -> opAritm .)
    TkDesigual      reduce using rule 68 (expresion -> opAritm .)
    TkResta         reduce using rule 68 (expresion -> opAritm .)
    TkSuma          reduce using rule 68 (expresion -> opAritm .)
    TkDiv           reduce using rule 68 (expresion -> opAritm .)
    TkMult          reduce using rule 68 (expresion -> opAritm .)
    TkMod           reduce using rule 68 (expresion -> opAritm .)
    TkConcatenacion reduce using rule 68 (expresion -> opAritm .)
    TkPunto         reduce using rule 68 (expresion -> opAritm .)
    TkPuntoYComa    reduce using rule 68 (expresion -> opAritm .)
    TkParCierra     reduce using rule 68 (expresion -> opAritm .)
    TkHacer         reduce using rule 68 (expresion -> opAritm .)
    TkTo            reduce using rule 68 (expresion -> opAritm .)
    TkComa          reduce using rule 68 (expresion -> opAritm .)
    TkDosPuntos     reduce using rule 68 (expresion -> opAritm .)
    TkBegin         reduce using rule 68 (expresion -> opAritm .)
    TkStep          reduce using rule 68 (expresion -> opAritm .)
    TkCorcheteCierra reduce using rule 68 (expresion -> opAritm .)


state 8

    (1) bloque -> TkBegin cuerpo . TkEnd

    TkEnd           shift and go to state 41


state 9

    (93) opCar -> TkValorAscii . terminal
    (94) opCar -> TkValorAscii . terminal TkSiguienteCar
    (95) opCar -> TkValorAscii . terminal TkAnteriorCar
    (23) terminal -> . TkId
    (24) terminal -> . TkCaracter
    (25) terminal -> . TkNum
    (26) terminal -> . TkTrue
    (27) terminal -> . TkFalse
    (28) terminal -> . TkTab
    (29) terminal -> . TkSalto
    (30) terminal -> . TkComilla
    (31) terminal -> . TkBarra
    (32) terminal -> . TkId TkCorcheteAbre TkNum TkCorcheteCierra
    (33) terminal -> . TkParAbre terminal TkParCierra

    TkId            shift and go to state 44
    TkCaracter      shift and go to state 12
    TkNum           shift and go to state 21
    TkTrue          shift and go to state 6
    TkFalse         shift and go to state 5
    TkTab           shift and go to state 31
    TkSalto         shift and go to state 18
    TkComilla       shift and go to state 13
    TkBarra         shift and go to state 32
    TkParAbre       shift and go to state 43

    terminal                       shift and go to state 42

state 10

    (39) instruccion -> condicional .

    TkBegin         reduce using rule 39 (instruccion -> condicional .)
    TkWith          reduce using rule 39 (instruccion -> condicional .)
    TkIf            reduce using rule 39 (instruccion -> condicional .)
    TkFor           reduce using rule 39 (instruccion -> condicional .)
    TkWhile         reduce using rule 39 (instruccion -> condicional .)
    TkId            reduce using rule 39 (instruccion -> condicional .)
    TkRead          reduce using rule 39 (instruccion -> condicional .)
    TkPrint         reduce using rule 39 (instruccion -> condicional .)
    TkParAbre       reduce using rule 39 (instruccion -> condicional .)
    TkResta         reduce using rule 39 (instruccion -> condicional .)
    TkShift         reduce using rule 39 (instruccion -> condicional .)
    TkCaracter      reduce using rule 39 (instruccion -> condicional .)
    TkNum           reduce using rule 39 (instruccion -> condicional .)
    TkTrue          reduce using rule 39 (instruccion -> condicional .)
    TkFalse         reduce using rule 39 (instruccion -> condicional .)
    TkTab           reduce using rule 39 (instruccion -> condicional .)
    TkSalto         reduce using rule 39 (instruccion -> condicional .)
    TkComilla       reduce using rule 39 (instruccion -> condicional .)
    TkBarra         reduce using rule 39 (instruccion -> condicional .)
    TkValorAscii    reduce using rule 39 (instruccion -> condicional .)
    TkNot           reduce using rule 39 (instruccion -> condicional .)
    TkEnd           reduce using rule 39 (instruccion -> condicional .)
    TkOtherwise     reduce using rule 39 (instruccion -> condicional .)


state 11

    (70) expresion -> opRel .

    TkPuntoYComa    reduce using rule 70 (expresion -> opRel .)
    TkResta         reduce using rule 70 (expresion -> opRel .)
    TkSuma          reduce using rule 70 (expresion -> opRel .)
    TkDiv           reduce using rule 70 (expresion -> opRel .)
    TkMult          reduce using rule 70 (expresion -> opRel .)
    TkMod           reduce using rule 70 (expresion -> opRel .)
    TkConcatenacion reduce using rule 70 (expresion -> opRel .)
    TkPunto         reduce using rule 70 (expresion -> opRel .)
    TkMayor         reduce using rule 70 (expresion -> opRel .)
    TkMenor         reduce using rule 70 (expresion -> opRel .)
    TkMayorIgual    reduce using rule 70 (expresion -> opRel .)
    TkMenorIgual    reduce using rule 70 (expresion -> opRel .)
    TkIgual         reduce using rule 70 (expresion -> opRel .)
    TkDesigual      reduce using rule 70 (expresion -> opRel .)
    TkConjuncion    reduce using rule 70 (expresion -> opRel .)
    TkDisyuncion    reduce using rule 70 (expresion -> opRel .)
    TkParCierra     reduce using rule 70 (expresion -> opRel .)
    TkHacer         reduce using rule 70 (expresion -> opRel .)
    TkTo            reduce using rule 70 (expresion -> opRel .)
    TkComa          reduce using rule 70 (expresion -> opRel .)
    TkDosPuntos     reduce using rule 70 (expresion -> opRel .)
    TkBegin         reduce using rule 70 (expresion -> opRel .)
    TkStep          reduce using rule 70 (expresion -> opRel .)
    TkCorcheteCierra reduce using rule 70 (expresion -> opRel .)


state 12

    (24) terminal -> TkCaracter .
